remove JCPP_INSTALL_PATH etc.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -66,7 +66,7 @@ endif()
 
 jcpp_enable_bigobj(${JCPP_PROJECT_FULL_NAME}-test)
 
-install(TARGETS ${JCPP_PROJECT_FULL_NAME}-test DESTINATION "${JCPP_BIN_INSTALL_PATH}")
+install(TARGETS ${JCPP_PROJECT_FULL_NAME}-test DESTINATION "${JCPP_INSTALL_BIN_DIR}")
 
 add_test(NAME Bug8132125 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Bug8132125)
 add_test(NAME Bug8139572 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Bug8139572)
