--- a/test/classes/nontestng/java/time/chrono/CMakeLists.txt
+++ b/test/classes/nontestng/java/time/chrono/CMakeLists.txt
@@ -1,10 +1,10 @@
 #machine generated
 
-aux_source_directory("${CMAKE_CURRENT_SOURCE_DIR}" test-classes.nontestng.java._1_SRCS)
-file(GLOB test-classes.nontestng.java._1_HEADERS *.h *.hpp)
-source_group("Include" FILES ${test-classes.nontestng.java._1_HEADERS}) 
-list(LENGTH test-classes.nontestng.java._1_SRCS test-classes.nontestng.java._1_SRCS_LENGTH)
-if(test-classes.nontestng.java._1_SRCS_LENGTH)
-	add_library(test-classes.nontestng.java._1 OBJECT "${test-classes.nontestng.java._1_SRCS}" "${test-classes.nontestng.java._1_HEADERS}")
-	jcpp_enable_bigobj(test-classes.nontestng.java._1)
+aux_source_directory(. SRCS)
+file(GLOB HEADERS *.h *.hpp)
+source_group("Include" FILES ${HEADERS}) 
+list(LENGTH SRCS SRCS_LENGTH)
+if(SRCS_LENGTH)
+	add_library(test.nontestng.java.time.chron OBJECT ${SRCS} ${HEADERS})
+	jcpp_enable_bigobj(test.nontestng.java.time.chron)
 endif()
