--- a/test/classes/nontestng/CMakeLists.txt
+++ b/test/classes/nontestng/CMakeLists.txt
@@ -2,11 +2,11 @@
 
 add_subdirectory("java")
 
-aux_source_directory("${CMAKE_CURRENT_SOURCE_DIR}" test-classes.nontestng_SRCS)
-file(GLOB test-classes.nontestng_HEADERS *.h *.hpp)
-source_group("Include" FILES ${test-classes.nontestng_HEADERS}) 
-list(LENGTH test-classes.nontestng_SRCS test-classes.nontestng_SRCS_LENGTH)
-if(test-classes.nontestng_SRCS_LENGTH)
-	add_library(test-classes.nontestng OBJECT "${test-classes.nontestng_SRCS}" "${test-classes.nontestng_HEADERS}")
-	jcpp_enable_bigobj(test-classes.nontestng)
+aux_source_directory(. SRCS)
+file(GLOB HEADERS *.h *.hpp)
+source_group("Include" FILES ${HEADERS}) 
+list(LENGTH SRCS SRCS_LENGTH)
+if(SRCS_LENGTH)
+	add_library(test.nontestng OBJECT ${SRCS} ${HEADERS})
+	jcpp_enable_bigobj(test.nontestng)
 endif()
