--- a/test/classes/nontestng/java/CMakeLists.txt
+++ b/test/classes/nontestng/java/CMakeLists.txt
@@ -2,11 +2,11 @@
 
 add_subdirectory("time")
 
-aux_source_directory("${CMAKE_CURRENT_SOURCE_DIR}" test-classes.nontestng.java_SRCS)
-file(GLOB test-classes.nontestng.java_HEADERS *.h *.hpp)
-source_group("Include" FILES ${test-classes.nontestng.java_HEADERS}) 
-list(LENGTH test-classes.nontestng.java_SRCS test-classes.nontestng.java_SRCS_LENGTH)
-if(test-classes.nontestng.java_SRCS_LENGTH)
-	add_library(test-classes.nontestng.java OBJECT "${test-classes.nontestng.java_SRCS}" "${test-classes.nontestng.java_HEADERS}")
-	jcpp_enable_bigobj(test-classes.nontestng.java)
+aux_source_directory(. SRCS)
+file(GLOB HEADERS *.h *.hpp)
+source_group("Include" FILES ${HEADERS}) 
+list(LENGTH SRCS SRCS_LENGTH)
+if(SRCS_LENGTH)
+	add_library(test.nontestng.java OBJECT ${SRCS} ${HEADERS})
+	jcpp_enable_bigobj(test.nontestng.java)
 endif()
